feat: Main markup 80%

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,8 @@ h1,
 h2,
 h3,
 h4,
+h5,
+h6,
 p,
 ul[class],
 ol[class],
@@ -42,6 +44,11 @@ body {
 ul[class],
 ol[class] {
   list-style: none;
+}
+
+
+a {
+  text-decoration: none;
 }
 
 /* A elements that don't have a class get default styles */
