--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ body {
   line-height: 1.5;
   min-width: 480px;
 
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 /* Remove list styles on ul, ol elements with a class attribute */
