feat: Add NotoSansKR font

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import '../node_modules/normalize.css/normalize.css';
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap&subset=korean');
 
 /* Box sizing rules */
 *,
